--- a/custom_components/resrobot/manifest.json
+++ b/custom_components/resrobot/manifest.json
@@ -1,9 +1,9 @@
 {
   "domain": "resrobot",
   "name": "resrobot",
-  "documentation": "",
-  "dependencies": [],
   "after_dependencies": ["http", "rest"],
   "codeowners": ["@iesus"],
-  "requirements": []
+  "requirements": [],
+  "issue_tracker": "https://github.com/TekniskSupport/home-assistant-resrobot/issues", 
+  "documentation": "https://github.com/TekniskSupport/home-assistant-resrobot/blob/master/info.md"
 }
