--- a/custom_components/resrobot/manifest.json
+++ b/custom_components/resrobot/manifest.json
@@ -5,6 +5,6 @@
   "codeowners": ["@iesus"],
   "requirements": [],
   "issue_tracker": "https://github.com/TekniskSupport/home-assistant-resrobot/issues", 
-  "documentation": "https://github.com/TekniskSupport/home-assistant-resrobot/blob/master/info.md"
+  "documentation": "https://github.com/TekniskSupport/home-assistant-resrobot/blob/master/info.md",
   "version": "v0.0.8"
 }
